# iso20022-readiness-suite-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  MAINTAINERS.md  Makefile  README.md  ROADMAP.md  SECURITY.md  STYLEGUIDE.md  SUPPORT.md  glama.json  mkdocs.yml  pyproject.toml  server.json
.github/: dependabot.yml
.github/workflows/: ci.yml  mcp-inspect.yml  publish-mcp.yml  release.yml
demos/: README.md  e2e_pipeline.py
docs/: index.md  orchestration.md  profiles.md  quickstart.md  transport.md
examples/: 01_list_profiles.py  02_detect_and_route.py  03_readiness_check.py  04_remediate_payload.py  05_simulate_accept.py  06_simulate_reject.py  07_apply_profile.py  08_score_and_summary.py  09_http_oauth_config.py  README.md
iso20022_readiness_suite_mcp/: __init__.py  errors.py  models.py  server.py
iso20022_readiness_suite_mcp/clients/: __init__.py  sub_server.py
iso20022_readiness_suite_mcp/data/profiles/: cbpr_target.json  fednow_core.json  generic.json  sepa_instant.json
iso20022_readiness_suite_mcp/http/: __init__.py  context.py  oauth.py  transport.py
iso20022_readiness_suite_mcp/orchestrators/: __init__.py  readiness.py  routing.py  simulator.py
iso20022_readiness_suite_mcp/policies/: __init__.py  engine.py
iso20022_readiness_suite_mcp/reports/: __init__.py  compiler.py
requirements/: build.in  build.txt  docs.txt  lint.in  lint.txt  sbom.in  sbom.txt  security.in  security.txt  test.in  test.txt
tests/: _jwt_helpers.py  conftest.py  test_compiler.py  test_doc_snippets.py  test_engine.py  test_errors.py  test_examples.py  test_http_context.py  test_http_oauth.py  test_http_transport.py  test_models.py  test_readiness.py  test_routing.py  test_server.py  test_simulator.py  test_sub_server.py  test_version.py
