[tool.poetry]
name = "iso20022-readiness-suite-mcp"
version = "0.0.2"
description = "Orchestration MCP server: ISO 20022 readiness scoring, remediation, and bank-response simulation over the foundational MCP servers."
authors = ["Sebastien Rousseau <sebastian.rousseau@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/sebastienrousseau/iso20022-readiness-suite-mcp"
homepage = "https://sebastienrousseau.github.io/iso20022-readiness-suite-mcp/"
keywords = ["iso20022", "mcp", "orchestration", "readiness", "cbpr", "payments"]
packages = [
    { include = "iso20022_readiness_suite_mcp" },
]
include = ["iso20022_readiness_suite_mcp/data/**/*.json"]

[tool.poetry.scripts]
iso20022-readiness-suite-mcp = "iso20022_readiness_suite_mcp.server:main"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
mcp = ">=1.28.1"
pydantic = ">=2.9,<3"
defusedxml = ">=0.7,<0.8"
# Optional streamable-HTTP transport (iso20022_readiness_suite_mcp.http):
# OAuth 2.1 resource-server JWT validation needs PyJWT; [crypto] guarantees
# RSA/EC JWKS support. httpx fetches the JWKS; starlette/uvicorn serve ASGI
# (both already pulled in transitively by mcp, pinned here for the direct
# imports in the http subpackage).
pyjwt = { version = ">=2.10,<3", extras = ["crypto"] }
httpx = ">=0.27,<1"
starlette = ">=1.3.1,<2"
uvicorn = ">=0.30,<1"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.3,<10.0.0"
pytest-asyncio = ">=0.24,<2.0"
pytest-cov = ">=6.0.0,<8.0.0"
black = "^26.3.1"
ruff = ">=0.1,<0.16"
mypy = ">=1.11,<3.0"
interrogate = "^1.7"
bandit = "^1.7.0"

[tool.interrogate]
fail-under = 100
ignore-init-module = true
ignore-magic = true
verbose = 1

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py310']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "strict"
addopts = [
    "-ra",
    "--strict-markers",
    "--tb=short",
    "--cov=iso20022_readiness_suite_mcp",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-fail-under=100",
    "-m", "not perf and not stress",
]
markers = [
    "perf: performance/benchmark tests (excluded from the coverage gate)",
    "stress: load/stress and soak tests (excluded from the coverage gate)",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_also = ["pragma: no cover", "if TYPE_CHECKING:"]

[tool.ruff]
line-length = 79
target-version = "py310"
extend-exclude = ["*.md", ".venv", ".eggs"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/conftest.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]
exclude = [".venv/", ".eggs/"]

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "defusedxml.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
warn_unused_ignores = false
